# aiorem

./: .pre-commit-config.yaml  .readthedocs.yaml  README.rst  pyproject.toml  requirements-dev.txt
.github/workflows/: doc_build_test.yml  release.yml  test_docs.yml  type_completeness_test.yml  unit_tests.yml
aiorem/: __about__.py  _resourcemanager.py
docs/: requirements-docs.txt
docs/source/: aiorem.rst  conf.py  index.rst
tests/: __init__.py  conftest.py  test_build.py  test_resourcemanager.py  test_resourcemanagercollection.py
